--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "deploy": "npm run build && wrangler pages deploy",
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "test": "vitest --run",
     "test:watch": "vitest",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "npm run lint -- --fix",
-    "start": "bindings=$(./bindings.sh) && wrangler pages dev ./build/client $bindings",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "typegen": "wrangler types",
-    "preview": "pnpm run build && pnpm run start"
+    "preview": "npm run build && npm run start"
   },
   "engines": {
     "node": ">=18.18.0"
@@ -45,9 +43,9 @@
     "@nanostores/react": "^0.7.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@remix-run/cloudflare": "^2.10.2",
-    "@remix-run/cloudflare-pages": "^2.10.2",
+    "@remix-run/node": "^2.10.2",
     "@remix-run/react": "^2.10.2",
+    "@remix-run/serve": "^2.10.2",
     "@uiw/codemirror-theme-vscode": "^4.23.0",
     "@unocss/reset": "^0.61.0",
     "@webcontainer/api": "1.3.0-internal.10",
@@ -78,7 +76,6 @@
   },
   "devDependencies": {
     "@blitz/eslint-plugin": "0.1.0",
-    "@cloudflare/workers-types": "^4.20240620.0",
     "@remix-run/dev": "^2.10.0",
     "@types/diff": "^5.2.1",
     "@types/react": "^18.2.20",
@@ -96,7 +93,6 @@
     "vite-plugin-optimize-css-modules": "^1.1.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.1",
-    "wrangler": "^3.63.2",
     "zod": "^3.23.8"
   },
   "resolutions": {
